--- a/Nav/css/styles.css
+++ b/Nav/css/styles.css
@@ -196,7 +196,7 @@ nav .container {
     top: 64px;
     bottom: 0;
     left: 0;
-    background: #333;
+    min-width: 320px;
   }
   .nav-menu-reverse {
     -webkit-box-orient: horizontal;
@@ -204,14 +204,20 @@ nav .container {
         -ms-flex-direction: row-reverse;
             flex-direction: row-reverse;
   }
+  .nav-link {
+    padding: 16px 40px;
+  }
 }
 
 @media only screen and (max-width: 576px) {
   nav {
-    padding: 0 10px;
+    padding: 0 18px;
   }
   nav .container {
     padding: 0 10px;
+  }
+  .nav-link {
+    padding: 16px 28px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
