--- a/Nav/css/styles.scss
+++ b/Nav/css/styles.scss
@@ -170,11 +170,15 @@ nav .container {
         top: 64px;
         bottom: 0;
         left: 0;
-        background: #333;
+        min-width: 320px;
     }
 
     .nav-menu-reverse {
         flex-direction: row-reverse;
+    }
+
+    .nav-link {
+        padding: 16px 40px;
     }
 
 }
@@ -183,11 +187,15 @@ nav .container {
 @media only screen and (max-width: 576px) {
 
     nav {
-        padding: 0 10px;
+        padding: 0 18px;
     }
 
     nav .container {
         padding: 0 10px;
+    }
+
+    .nav-link {
+        padding: 16px 28px;
     }
 
 }
