--- a/Nav/css/styles.css
+++ b/Nav/css/styles.css
@@ -1,13 +1,9 @@
 /* Color */
 /* Typography */
-@font-face {
-  font-family: 'Averta';
-  src: url("../fonts/Intelligent Design - Averta-black.otf");
-}
-
 body {
   font-family: "Open Sans", sans-serif;
   color: #10141D;
+  background-color: #d5dadf;
 }
 
 h1 {
@@ -54,10 +50,10 @@ nav {
   /* Firefox, other Gecko */
   box-sizing: border-box;
   /* Opera/IE 8+ */
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
@@ -65,6 +61,7 @@ nav {
   padding: 0 20px;
   min-height: 64px;
   background: #fff;
+  z-index: 999;
 }
 
 nav .container {
@@ -89,6 +86,7 @@ nav .container {
       -ms-flex-align: center;
           align-items: center;
   margin-right: 20px;
+  min-height: 64px;
 }
 
 .nav-link {
@@ -104,6 +102,13 @@ nav .container {
   color: #10141D;
   position: relative;
   font-weight: 600;
+  list-style: none;
+  min-height: 64px;
+  -webkit-box-sizing: border-box;
+  /* Safari/Chrome, other WebKit */
+  /* Firefox, other Gecko */
+  box-sizing: border-box;
+  /* Opera/IE 8+ */
 }
 
 .nav-link::after {
@@ -130,9 +135,15 @@ nav .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding-left: 0;
+  margin: 0;
 }
 
-.nav-menu-button {
+.nav-menu-container li {
+  list-style: none;
+}
+
+.burger {
   display: none;
   -webkit-box-sizing: border-box;
   /* Safari/Chrome, other WebKit */
@@ -152,7 +163,7 @@ nav .container {
           justify-content: center;
 }
 
-.nav-menu-button .icon-line {
+.burger div {
   width: 100%;
   height: 2px;
   background: #10141D;
@@ -162,12 +173,12 @@ nav .container {
   transition: all 200ms;
 }
 
-.nav-menu-button .icon-line:last-of-type {
+.burger div:last-of-type {
   width: 50%;
   margin-bottom: 0;
 }
 
-.nav-menu-button:hover .icon-line:last-of-type {
+.burger:hover div:last-of-type {
   width: 100%;
 }
 
@@ -181,7 +192,7 @@ nav .container {
 }
 
 @media only screen and (max-width: 768px) {
-  .nav-menu-button {
+  .burger {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -197,6 +208,8 @@ nav .container {
     bottom: 0;
     left: 0;
     min-width: 320px;
+    height: 100vh;
+    background: #fff;
   }
   .nav-menu-reverse {
     -webkit-box-orient: horizontal;
