--- a/Nav/css/styles.scss
+++ b/Nav/css/styles.scss
@@ -64,7 +64,7 @@ nav {
     align-items: stretch;
     position: fixed;
     padding: 0 20px;
-    min-height: 64px;
+    min-height: 56px;
     background: #fff;
     z-index: 999;
 }
@@ -78,28 +78,34 @@ nav .container {
     align-items: center;
 }
 
+.nav-menu-reverse {
+    height: 100%;
+}
+
 .brand {
     display: flex;
     height: 100%;
     align-items: center;
     margin-right: 20px;
-    min-height: 64px;
+    height: 100%;
 }
 
 .nav-link {
     display: flex;
     align-items: center;
-    padding: 20px;
+    height: 100%;
+    padding: 16px;
     font-size: 14px;
     line-height: 20px;
     color: $color-primary;
+    background: rgba($color-primary, 0);
     position: relative;
     font-weight: 600;
     list-style: none;
-    min-height: 64px;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
+    transition: all 100ms;
 }
 
 .nav-link::after {
@@ -124,6 +130,7 @@ nav .container {
     display: flex;
     padding-left: 0;
     margin: 0;
+    height: 100%;
 }
 
 .nav-menu-container li {
@@ -138,7 +145,7 @@ nav .container {
     margin-right: 20px;
     height: 48px;
     width: 48px;
-    padding: 8px;
+    padding: 12px;
     flex-direction: column;
     justify-content: center;
 }
@@ -148,7 +155,7 @@ nav .container {
     height: 2px;
     background: $color-primary;
     border-radius: 2px;
-    margin-bottom: 6px;
+    margin-bottom: 4px;
     transition: all 200ms;
 }
 
@@ -177,7 +184,7 @@ nav .container {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 64px;
+        top: 56px;
         bottom: 0;
         left: 0;
         min-width: 320px;
@@ -191,6 +198,25 @@ nav .container {
 
     .nav-link {
         padding: 16px 40px;
+    }
+
+    .nav-link:hover,
+    .nav-link.active {
+        background: rgba($color-primary, .1)
+    }
+
+    .nav-link::after {
+        content: '';
+        display: none;
+    }
+
+    .nav-overlay {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: rgba(0, 0, 0, .6);
     }
 
 }
